--- a/k8s/odoo-env-secret.yaml
+++ b/k8s/odoo-env-secret.yaml
@@ -4,9 +4,9 @@ metadata:
   name: odoo-env
   namespace: odoo-app
 type: Opaque
-stringData:
-  HOST: uc16-postgres
-  USER: odoo
-  PASSWORD: odoo
-  DATABASE: odoo
+data:
+  HOST: "dWMxNi1wb3N0Z3Jlcwo="
+  USER: "b2Rvbwo="
+  PASSWORD: "b2Rvbwo="
+#  DATABASE: "b2Rvbwo="
 
